<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_member"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:scaleType="fitEnd"
            android:paddingBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_welcome_th"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.ssoft.iconsapp.share.widget.CustomEditText
                android:inputType="number"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/telET"
                android:maxLength="10"
                android:hint="@string/hit_tel"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_input"
                />

            <com.ssoft.iconsapp.share.widget.CustomEditText
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/hit_email"
                android:id="@+id/emailET"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input"
               />

            <com.ssoft.iconsapp.share.widget.CustomEditText
                android:inputType="number"
                android:id="@+id/passcodeET"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:maxLength="5"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_input"
                android:hint="@string/hit_passcode" />

            <CheckBox
                android:id="@+id/acceptCK"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/kanit_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_accept_condition" />

            <com.ssoft.iconsapp.share.widget.CustomButton
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:text="@string/register"
                android:id="@+id/saveBT"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_input_button_primary" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>