<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_member"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:padding="24dp"
            android:background="@drawable/bg_input_button_primary"
            android:backgroundTint="@color/white"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_accept"
                android:layout_gravity="center"
                app:tint="@color/colorPrimary"/>
            <com.ssoft.iconsapp.share.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_successfuly"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:id="@+id/titleTV"
                android:layout_gravity="center"/>


            <com.ssoft.iconsapp.share.widget.TextViewIcon
                android:id="@+id/nameTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:tvi_icon="@drawable/ic_email"
                app:tvi_title="rhtrt" />

            <com.ssoft.iconsapp.share.widget.TextViewIcon
                android:id="@+id/telTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <com.ssoft.iconsapp.share.widget.TextViewIcon
                android:id="@+id/emailTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hit_passcode"
                android:maxLines="1" />


            <com.ssoft.iconsapp.share.widget.TextViewTitle
                android:visibility="visible"
                android:id="@+id/codeTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hit_passcode"
                android:maxLines="1" />


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/contentPassCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.ssoft.iconsapp.share.widget.CustomEditText
                    android:id="@+id/passcodeET"
                    android:backgroundTint="@color/colorPrimaryTrans"
                    android:background="@drawable/bg_input"
                    android:padding="8dp"
                    android:maxLength="5"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_new_passcode"
                    android:layout_marginTop="12dp"/>

                <LinearLayout
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.ssoft.iconsapp.share.widget.CustomButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="38dp"
                        android:text="@string/cancel"
                        android:id="@+id/cancelBT"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/bg_input" />
                    <com.ssoft.iconsapp.share.widget.CustomButton
                        android:layout_marginLeft="12dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="38dp"
                        android:text="@string/save"
                        android:id="@+id/saveBT"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_input_button_primary" />
                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_gravity="right"
                android:id="@+id/editAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    app:tint="@color/colorPrimary"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_edit"/>
                <com.ssoft.iconsapp.share.widget.CustomTextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:id="@+id/editTV"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>